--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cart-angel",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mahede182.github.io/cart-angle.git",
+  "homepage": "https://mahede182.github.io/cart-angle/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
